# CS336_assignment1

./: .gitignore  generate.py  profile.html  pyproject.toml  sweep.yaml  train.py  train.sh
cs336_basics/: bpe.py  pretokenization_example.py  test.ipynb  train.py  transformer.py  utils.py
cs336_basics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: adapters.py
web/: index.html
